different ways. The "pdb-atom" format determines the sequence as it appears in
the structure based on the atom coordinate section of the file (via Bio.PDB,
so NumPy is currently required for this). Alternatively, you can use the
"pdb-seqres" format to read the complete protein sequence as it is listed in
the the PDB header, if available.

Additionally there have been other minor bug fixes and more unit tests.

Many thanks to the Biopython developers and community for making this release
possible, especially the following contributors:

Brandon Invergo
David Cain
Eric Talevich
Grace Yeo (first contribution)
Jingping Li (first contribution)
Kai Blin (first contribution)
Leighton Pritchard
Lenna Peterson
Lucas Sinclair (first contribution)
Nick Semenkovich (first contribution)
Peter Cock
Robert Ernst (first contribution)
Tiago Antao

===================================================================

25 June 2012: Biopython 1.60

New module Bio.bgzf supports reading and writing BGZF files (Blocked GNU
Zip Format), a variant of GZIP with efficient random access, most commonly
used as part of the BAM file format. This uses Python's zlib library
internally, and provides a simple interface like Python's gzip library.
Using this the Bio.SeqIO indexing functions now support BGZF compressed
sequence files.

The GenBank/EMBL parser will now give a warning on unrecognised feature
locations and continue parsing (leaving the feature's location as None).
Previously it would abort with an exception, which was often unhelpful.

The Bio.PDB.MMCIFParser is now compiled by default (but is still not
available under Jython, PyPy or Python 3).

The SFF parser in Bio.SeqIO now decodes Roche 454 'universal accession
number' 14 character read names, which encode the timestamp of the run,
the region the read came from, and the location of the well.

In the Phylo module, the "draw" function for plotting tree objects has become