@@ -78,3 +78,24 @@ class BiopythonDeprecationWarning(BiopythonWarning):
     developers by sending an email to biopython-dev@biopython.org.
     """
     pass
+
+class BiopythonExperimentalWarning(BiopythonWarning):
+    """Biopython experimental code warning.
+
+    Biopython uses this warning for experimental code ('alpha' or 'beta'
+    level code) which is released as part of the standard releases to mark
+    sub-modules or functions for early adopters to test & give feedback..
+
+    Code issuing this warning is likely to change (or even be removed) in
+    a subsequent release of Biopython. Such code should NOT be used for
+    production/stable code. It should only be used if:
+
+    * You are running the latest release of Biopython, or ideally the
+      latest code from our repository.
+    * You are subscribed to the biopython-dev mailing list to provide
+      feedback on this code, and to be alterted to changes to it.
+
+    If all goes well, experimental code would be promoted to stable in
+    a subsequence release, and this warning removed from it.
+    """
+    pass
